--- a/CleanConmute/Base.lproj/Main.storyboard
+++ b/CleanConmute/Base.lproj/Main.storyboard
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14810.11" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.13"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Main Map View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="MainMapViewController" customModule="CleanConmute" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="MainMapViewController" customModule="Greentastic" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OcG-hw-T4m"/>
+                        <viewControllerLayoutGuide type="bottom" id="u5m-uT-t34"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,28 +25,34 @@
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZXS-Is-cu1">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
                                     </mapView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4hc-TQ-W0B">
+                                        <rect key="frame" x="0.0" y="587" width="375" height="0.0"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="aoT-ie-53W">
                                         <rect key="frame" x="0.0" y="587" width="375" height="32"/>
                                         <segments>
-                                            <segment title="Standard"/>
-                                            <segment title="Satellite"/>
-                                            <segment title="Hybrid"/>
+                                            <segment title="Map &amp; Routes"/>
+                                            <segment title="Transport Overview"/>
                                         </segments>
                                         <connections>
-                                            <action selector="mapChangeType:" destination="9pv-A4-QxB" eventType="valueChanged" id="aUK-pZ-BWv"/>
+                                            <action selector="editBegin:" destination="9pv-A4-QxB" eventType="editingDidBegin" id="Ns1-mj-5dT"/>
+                                            <action selector="switchMapOverview:" destination="9pv-A4-QxB" eventType="valueChanged" id="KJH-qE-0Ih"/>
                                         </connections>
                                     </segmentedControl>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="4hc-TQ-W0B" firstAttribute="top" secondItem="aoT-ie-53W" secondAttribute="top" id="ZeI-vG-Qsx"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="top" secondItem="eGA-k9-8WO" secondAttribute="top" id="5T5-mY-SAW"/>
-                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="eGA-k9-8WO" secondAttribute="trailing" id="8eH-YX-4UO"/>
-                            <constraint firstItem="eGA-k9-8WO" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="YP1-B2-4i1"/>
-                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="eGA-k9-8WO" secondAttribute="bottom" id="b7b-Ge-Igy"/>
+                            <constraint firstItem="OcG-hw-T4m" firstAttribute="bottom" secondItem="eGA-k9-8WO" secondAttribute="top" id="5T5-mY-SAW"/>
+                            <constraint firstAttribute="trailing" secondItem="eGA-k9-8WO" secondAttribute="trailing" id="8eH-YX-4UO"/>
+                            <constraint firstItem="eGA-k9-8WO" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="YP1-B2-4i1"/>
+                            <constraint firstItem="u5m-uT-t34" firstAttribute="top" secondItem="eGA-k9-8WO" secondAttribute="bottom" id="b7b-Ge-Igy"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" image="map" selectedImage="map" id="acW-dT-cKf"/>
                     <connections>
@@ -59,7 +68,11 @@
         <!--User Profile-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="UserProfile" customModule="CleanConmute" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="UserProfile" customModule="Greentastic" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nc1-nY-tWN"/>
+                        <viewControllerLayoutGuide type="bottom" id="HF2-Bc-Vok"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW" customClass="UserViewController">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -277,12 +290,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4ik-qn-L9z" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="16" id="Jxu-qr-mth"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="4ik-qn-L9z" secondAttribute="trailing" constant="16" id="NxN-Vb-xzx"/>
-                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="4ik-qn-L9z" secondAttribute="bottom" constant="16" id="jQn-44-af0"/>
-                            <constraint firstItem="4ik-qn-L9z" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="16" id="vk7-La-itk"/>
+                            <constraint firstItem="4ik-qn-L9z" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" constant="16" id="Jxu-qr-mth"/>
+                            <constraint firstAttribute="trailing" secondItem="4ik-qn-L9z" secondAttribute="trailing" constant="16" id="NxN-Vb-xzx"/>
+                            <constraint firstItem="HF2-Bc-Vok" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4ik-qn-L9z" secondAttribute="bottom" constant="16" id="jQn-44-af0"/>
+                            <constraint firstItem="4ik-qn-L9z" firstAttribute="top" secondItem="Nc1-nY-tWN" secondAttribute="bottom" constant="16" id="vk7-La-itk"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="user" selectedImage="user" id="cPa-gy-q4n"/>
                     <connections>
@@ -306,7 +318,11 @@
         <!--Statistics View Controller-->
         <scene sceneID="GrN-br-KTW">
             <objects>
-                <viewController id="2NU-sb-9kl" customClass="StatisticsViewController" customModule="CleanConmute" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="2NU-sb-9kl" customClass="StatisticsViewController" customModule="Greentastic" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fm6-7a-PQg"/>
+                        <viewControllerLayoutGuide type="bottom" id="BYj-2x-vbK"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="o8G-eb-nhA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -318,23 +334,23 @@
                                     <constraint firstAttribute="width" constant="250" id="btq-jo-hXu"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EJV-wE-dQH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bicycle" translatesAutoresizingMaskIntoConstraints="NO" id="EJV-wE-dQH">
                                 <rect key="frame" x="69" y="185" width="58" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CDy-Br-1yN">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="car" translatesAutoresizingMaskIntoConstraints="NO" id="CDy-Br-1yN">
                                 <rect key="frame" x="210" y="169" width="58" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OH4-48-gKU">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ebike" translatesAutoresizingMaskIntoConstraints="NO" id="OH4-48-gKU">
                                 <rect key="frame" x="291" y="244" width="58" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vUQ-0n-mrr">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bus" translatesAutoresizingMaskIntoConstraints="NO" id="vUQ-0n-mrr">
                                 <rect key="frame" x="158" y="446" width="58" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XHO-Yd-Vbc">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="walking" translatesAutoresizingMaskIntoConstraints="NO" id="XHO-Yd-Vbc">
                                 <rect key="frame" x="16" y="325" width="58" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -344,7 +360,6 @@
                             <constraint firstItem="Ug2-ra-d92" firstAttribute="centerX" secondItem="o8G-eb-nhA" secondAttribute="centerX" id="o9m-t5-4kj"/>
                             <constraint firstItem="Ug2-ra-d92" firstAttribute="centerY" secondItem="o8G-eb-nhA" secondAttribute="centerY" id="ohu-Tn-PlN"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="oOG-c0-TRu"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="chart" selectedImage="chart" id="Go1-4T-RUS"/>
                 </viewController>
@@ -365,22 +380,62 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="2NU-sb-9kl" kind="relationship" relationship="viewControllers" id="HNT-hk-8Gm"/>
+                        <segue destination="gDd-cX-c1p" kind="relationship" relationship="viewControllers" id="9kb-Kp-XKy"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
+        <!--Info View Controller-->
+        <scene sceneID="bL1-Lu-1RL">
+            <objects>
+                <viewController id="gDd-cX-c1p" customClass="InfoViewController" customModule="Greentastic" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gax-8C-XxK"/>
+                        <viewControllerLayoutGuide type="bottom" id="S0c-pt-pr1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g3N-gT-Tbt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L10-gw-CfA">
+                                <rect key="frame" x="127" y="0.0" width="125" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="INFO - Sources" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mak-ob-pvL">
+                                <rect key="frame" x="127" y="69" width="118" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="info.circle" catalog="system" id="NQe-nA-V3e"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yoq-tf-weF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-20" y="877"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="bicycle" width="20" height="20"/>
+        <image name="bus" width="20" height="20"/>
+        <image name="car" width="20" height="20"/>
         <image name="chart" width="20" height="20"/>
         <image name="co2" width="20" height="20"/>
         <image name="dollar" width="20" height="20"/>
+        <image name="ebike" width="20" height="20"/>
         <image name="flame" width="20" height="20"/>
         <image name="gasmask" width="20" height="20"/>
+        <image name="info.circle" catalog="system" width="64" height="60"/>
         <image name="map" width="20" height="20"/>
         <image name="pieplot" width="386" height="354.66665649414062"/>
         <image name="timer" width="20" height="20"/>
         <image name="user" width="20" height="20"/>
+        <image name="walking" width="20" height="20"/>
     </resources>
 </document>
